# iracing-setup-comparison

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  package-lock.json  package.json  prisma.config.ts  proxy.ts  railway.toml  tsconfig.json
.github/workflows/: bridge-build.yml  refresh-data.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/admin/files/[datapackId]/: page.tsx
app/api/bridge-asset/[filename]/: route.ts
app/api/files/[datapackId]/: route.ts
app/api/files/[datapackId]/[filename]/: route.ts
app/api/files/[datapackId]/zip/: route.ts
app/api/files/hymo/[productId]/: route.ts
app/api/files/hymo/[productId]/[filename]/: route.ts
app/api/files/hymo/[productId]/zip/: route.ts
app/api/ingest/: route.ts
app/api/latest-bridge/: route.ts
app/api/picker/all-cars/: route.ts
app/api/picker/cars/: route.ts
app/api/picker/classes/: route.ts
app/api/picker/files/: route.ts
app/api/picker/seasons/: route.ts
app/api/picker/tracks/: route.ts
app/api/picker/tracks-by-class/: route.ts
app/api/picker/weeks/: route.ts
app/compare/: page.tsx
app/releases/: page.tsx
app/week/[weekNum]/: page.tsx
app/week/[weekNum]/track/[trackId]/: page.tsx
app/week/[weekNum]/track/[trackId]/car/[carId]/: page.tsx
bridge-app/: README.md  index.html  package-lock.json  package.json  postcss.config.mjs  vite.config.ts
bridge-app/src/: App.tsx  helpers.ts  styles.ts  types.ts
bridge-app/src-tauri/: Cargo.toml  tauri.conf.json
bridge-app/src-tauri/capabilities/: default.json
bridge-app/src-tauri/icons/: icon.icns
bridge-app/src-tauri/src/: lib.rs  main.rs
bridge-app/src/screens/: Bulk.tsx  Manage.tsx  Picker.tsx  Settings.tsx
bridge-app/src/screens/picker/: CarShopCell.tsx  ClassAccordion.tsx  TrackDetailView.tsx  TracksView.tsx  WeeksView.tsx  picker-helpers.ts
components/: CompareFilters.tsx  CompareTable.tsx  ScrapingLegend.tsx  TrackCard.tsx  WeekCard.tsx
docs/superpowers/plans/: 2026-05-19-bridge-picker-redesign.md
docs/superpowers/specs/: 2026-05-19-bridge-picker-redesign-design.md
lib/: admin-data.ts  car-class-canonical.ts  car-name-canonical.ts  compare-data.ts  db.ts  files-manifest.ts  iracing-car-folders.ts  migrate-cars.ts  migrate-tracks.ts  season-resolve.ts  seed.ts  shop-slug.ts  track-canonical.ts  types.ts
lib/scrape/: gosetups.ts  grid-and-go-auth.ts  grid-and-go.ts  hymo-files-auth.ts  hymo-files.ts  hymo.ts  majors-garage.ts  p1doks.ts
prisma/: schema.prisma
scripts/: backfill-seasons.ts  probe-grid-and-go-files.ts  probe-grid-and-go.ts  probe-p1doks-step2.ts  probe-p1doks.ts  scrape-gosetups.ts  scrape-grid-and-go.ts  scrape-hymo.ts  scrape-majors-garage.ts  scrape-p1doks.ts
